@@ -340,6 +340,8 @@
 
 <MODE NAME="macroscheduler"		FILE="macroscheduler.xml"
         FILE_NAME_GLOB="*.scp" />
+        
+<MODE NAME="m4" FILE="m4.xml" FILE_NAME_GLOB="*.m4" />
 
 <MODE NAME="mail"		FILE="mail.xml" />
 
