@@ -5,8 +5,8 @@ jEdit 5.3 version history
 {{{ Version 5.3.1
 
 Thanks to Björn "Vampire" Kautler, Eric Le Lay, Jesse Pavel, Wayne Zhang,
-Makarius, A Vontobel,  Marc Häfner, Jordan Miner, Alan Ezust, and Dale Anson for
- contributing to this release.
+Makarius, A Vontobel,  Marc Häfner, Jordan Miner, Jack J. Woehr, Alan Ezust,
+and Dale Anson for contributing to this release.
 
 {{{ Bug Fixes
 
@@ -86,6 +86,8 @@ Makarius, A Vontobel,  Marc Häfner, Jordan Miner, Alan Ezust, and Dale Anson fo
 
 }}}
 {{{ Editing
+
+- Mode for m4 macro processor language (Patch #586 - Jack J. Woehr)
 
 - Drawj2d edit mode (Patch #573 - A. Vontobel)
 
